--- a/views/auth/login.pug
+++ b/views/auth/login.pug
@@ -20,7 +20,7 @@ block contenido
                             label.block
                             span(class="block text-sm font-medium text-slate-700") Contraseña
                             input(type="password" name="password" class="mt-1 px-3 py-2 bg-transparent border-2 shadow-sm border-secondary-gray placeholder-secondary-gray focus:outline-none focus:border-sky-500 focus:ring-sky-500 block w-full sm:text-sm focus:ring-1" placeholder="********")
-                        a(href="").ml-auto.text-principal-gray Olvide mi contraseña
+                        a(href="/auth/recover-password").ml-auto.text-principal-gray Olvide mi contraseña
 
                     .btns.w-full.mt-10    
                         button(class="bg-principal-gray text-white py-3 px-4 w-full mb-4").w-full Iniciar Sesion
