--- a/views/templates/sendEmail.pug
+++ b/views/templates/sendEmail.pug
@@ -3,7 +3,7 @@ extends ../layout/index
 block contenido
     main(class="w-8/12").h-screen.flex.flex-col.justify-between.m-auto 
         .py-10.text-center
-            p.text-secondary-gray.text-2xl Gracias por Registrarte en 
+            p.text-secondary-gray.text-2xl= mensajePagina
                 span.font-extrabold Fotaza
 
         .text-center 
