--- a/views/auth/recoverPassword.pug
+++ b/views/auth/recoverPassword.pug
@@ -10,6 +10,7 @@ block contenido
                     p.text-xl.text-secondary-gray.mt-2 No te preocupes, sigue las instrucciones
 
                 form(method="POST" action="").w-full
+                    input(type="hidden" name="_csrf" value= csrfToken)
                     .inputs.flex.flex-col.justify-evenly.h-40
                         .input 
                             label.block
