--- a/views/auth/resetPassword.pug
+++ b/views/auth/resetPassword.pug
@@ -10,6 +10,7 @@ block contenido
                     p.text-xl.text-secondary-gray.mt-2 Recuerda escribirla lo mas segura posible
 
                 form(method="POST" action="").w-full
+                input(type="hidden" name="_csrf" value= csrfToken)
                     .inputs.flex.flex-col.justify-evenly.h-52
                         .input 
                             label.block
