--- a/views/layout/header.pug
+++ b/views/layout/header.pug
@@ -6,6 +6,6 @@ header(class="mx-3.5")
         if !ocultarBtns
             nav(class="text-sm md:flex md:items-center md:gap-5 font-bold")
                 a(href="/auth/login") 
-                    button(class="bg-principal-gray text-white py-2 px-4") Iniciar Sesion
+                    button(class="bg-principal-gray text-white py-2 px-4 border-2 border-principal-gray") Iniciar Sesion
                 a(href="/auth/signup") 
                     button(class="bg-transparent border-2 text-principal-gray border-principal-gray py-2 px-4") Registrate
