Muestra de botones iniciar sesion y registrarse, añadido webpack

--- a/views/auth/login.pug
+++ b/views/auth/login.pug
@@ -46,5 +46,6 @@ block contenido
         aside(class="w-1/2 bg-cover bg-center bg-no-repeat" style=`background-image: url(${imageUrl})`)
             p(class="absolute bottom-8 right-8 text-white") Fotografía de 
                 span.font-bold= nameUserPhoto
-
+                
+block scripts 
     script(src='/js/closeAlert.js')
