--- a/public/css/app.css
+++ b/public/css/app.css
@@ -500,20 +500,20 @@ video {
   top: 0px;
   bottom: 0px;
 }
+.bottom-0 {
+  bottom: 0px;
+}
 .bottom-8 {
   bottom: 2rem;
 }
 .left-0 {
   left: 0px;
 }
-.right-8 {
-  right: 2rem;
-}
-.bottom-0 {
-  bottom: 0px;
-}
 .right-0 {
   right: 0px;
+}
+.right-8 {
+  right: 2rem;
 }
 .top-0 {
   top: 0px;
@@ -580,20 +580,17 @@ video {
 .mt-8 {
   margin-top: 2rem;
 }
-.mr-3 {
-  margin-right: 0.75rem;
-}
 .block {
   display: block;
-}
-.inline {
-  display: inline;
 }
 .flex {
   display: flex;
 }
 .inline-flex {
   display: inline-flex;
+}
+.hidden {
+  display: none;
 }
 .h-14 {
   height: 3.5rem;
@@ -604,17 +601,14 @@ video {
 .h-52 {
   height: 13rem;
 }
+.h-6 {
+  height: 1.5rem;
+}
 .h-96 {
   height: 24rem;
 }
 .h-screen {
   height: 100vh;
-}
-.h-5 {
-  height: 1.25rem;
-}
-.h-6 {
-  height: 1.5rem;
 }
 .min-h-screen {
   min-height: 100vh;
@@ -649,12 +643,6 @@ video {
 .w-full {
   width: 100%;
 }
-.w-5 {
-  width: 1.25rem;
-}
-.flex-shrink-0 {
-  flex-shrink: 0;
-}
 .flex-col {
   flex-direction: column;
 }
@@ -676,23 +664,23 @@ video {
 .rounded-md {
   border-radius: 0.375rem;
 }
-.border-2 {
-  border-width: 2px;
-}
 .border {
   border-width: 1px;
+}
+.border-2 {
+  border-width: 2px;
 }
 .border-principal-gray {
   --tw-border-opacity: 1;
   border-color: rgb(57 62 70 / var(--tw-border-opacity));
 }
-.border-secondary-gray {
-  --tw-border-opacity: 1;
-  border-color: rgb(146 154 171 / var(--tw-border-opacity));
-}
 .border-red-400 {
   --tw-border-opacity: 1;
   border-color: rgb(248 113 113 / var(--tw-border-opacity));
+}
+.border-secondary-gray {
+  --tw-border-opacity: 1;
+  border-color: rgb(146 154 171 / var(--tw-border-opacity));
 }
 .bg-green-500 {
   --tw-bg-opacity: 1;
@@ -706,20 +694,16 @@ video {
   --tw-bg-opacity: 1;
   background-color: rgb(57 62 70 / var(--tw-bg-opacity));
 }
+.bg-red-100 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(254 226 226 / var(--tw-bg-opacity));
+}
 .bg-red-500 {
   --tw-bg-opacity: 1;
   background-color: rgb(239 68 68 / var(--tw-bg-opacity));
 }
 .bg-transparent {
   background-color: transparent;
-}
-.bg-red-50 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(254 242 242 / var(--tw-bg-opacity));
-}
-.bg-red-100 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(254 226 226 / var(--tw-bg-opacity));
 }
 .bg-cover {
   background-size: cover;
@@ -732,9 +716,6 @@ video {
 }
 .fill-current {
   fill: currentColor;
-}
-.p-4 {
-  padding: 1rem;
 }
 .px-2 {
   padding-left: 0.5rem;
@@ -836,6 +817,10 @@ video {
   --tw-text-opacity: 1;
   color: rgb(220 38 38 / var(--tw-text-opacity));
 }
+.text-red-700 {
+  --tw-text-opacity: 1;
+  color: rgb(185 28 28 / var(--tw-text-opacity));
+}
 .text-secondary-gray {
   --tw-text-opacity: 1;
   color: rgb(146 154 171 / var(--tw-text-opacity));
@@ -851,14 +836,6 @@ video {
 .text-white {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
-}
-.text-red-800 {
-  --tw-text-opacity: 1;
-  color: rgb(153 27 27 / var(--tw-text-opacity));
-}
-.text-red-700 {
-  --tw-text-opacity: 1;
-  color: rgb(185 28 28 / var(--tw-text-opacity));
 }
 .placeholder-principal-gray::-moz-placeholder {
   --tw-placeholder-opacity: 1;
@@ -937,20 +914,6 @@ video {
 .focus\:ring-stone-950:focus {
   --tw-ring-opacity: 1;
   --tw-ring-color: rgb(12 10 9 / var(--tw-ring-opacity));
-}
-
-
-@media (prefers-color-scheme: dark) {
-
-  .dark\:bg-gray-800 {
-    --tw-bg-opacity: 1;
-    background-color: rgb(31 41 55 / var(--tw-bg-opacity));
-  }
-
-  .dark\:text-red-400 {
-    --tw-text-opacity: 1;
-    color: rgb(248 113 113 / var(--tw-text-opacity));
-  }
 }
 
 
