--- a/views/layout/header.pug
+++ b/views/layout/header.pug
@@ -3,7 +3,7 @@ header(class="mx-3.5")
         a(href="/") 
             img(src="/img/project/logo.svg", alt="").w-32
 
-        if !ocultarBtns
+        if viewBtnsAuth
             nav(class="text-sm md:flex md:items-center md:gap-5 font-bold")
                 a(href="/auth/login") 
                     button(class="bg-principal-gray text-white py-2 px-4 border-2 border-principal-gray") Iniciar Sesion
