--- a/views/layout/index.pug
+++ b/views/layout/index.pug
@@ -11,6 +11,9 @@ html(lang="es")
         meta(name="viewport", content="width=device-width, initial-scale=1.0")
         title Fotaza | #{pagina}
         link(rel="stylesheet", href="/css/app.css")
+        block styles
     body.min-h-screen
         block contenido
+
+        block scripts 
         
