--- a/views/categories/viewAllCategories.pug
+++ b/views/categories/viewAllCategories.pug
@@ -10,18 +10,20 @@ block contenido
             p.text-secondary-gray Estas son algunas de las categorias que tenemos para ofrecerte
 
             div.containerGrid.mx-10.my-10
-                each category in categories 
+                - let index = 0 // Inicializar el índice
+                each category in categories        
                     div(class="flex flex-col items-center justify-center")
-                        div(class="category rounded-2xl shadow-lg w-40 h-40 bg-cover bg-center bg-no-repeat cursor-pointer" style=`background-image: url(${category.image})`)
+                        div(class="category rounded-2xl shadow-lg w-40 h-40 bg-cover bg-center bg-no-repeat cursor-pointer" style=`background-image: url(${category.image})` data-category-user= categoriesUserIds.includes(category.id) ? category.id : null)
                             input(type="hidden" value= category.id)
                             input#csrfToken(type="hidden" name="_csrf" value= csrfToken)
                         p.text-principal-gray.pt-1= category.name
+                    - index++ // Incrementar el índice en cada iteración
 
             div.text-center.mt-10
                 button#btnSendCategories(class="bg-principal-gray py-2 px-4 inline-flex w-40 hover:bg-secondary-gray")
-                    span.w-full.text-white Continuar
+                    span.w-full.text-white Guardar
                     img(src="/img/project/arrow-right.svg", alt="").w-6.mr-2
                 
 block scripts
     script(src="/js/sendCategories.js") 
-    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+    script(src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js")
