--- a/public/css/app.css
+++ b/public/css/app.css
@@ -713,6 +713,9 @@ video {
 .gap-4 {
   gap: 1rem;
 }
+.gap-2 {
+  gap: 0.5rem;
+}
 .rounded {
   border-radius: 0.25rem;
 }
@@ -1063,6 +1066,18 @@ video {
     display: flex;
   }
 
+  .md\:w-3\/6 {
+    width: 50%;
+  }
+
+  .md\:w-5\/6 {
+    width: 83.333333%;
+  }
+
+  .md\:w-4\/6 {
+    width: 66.666667%;
+  }
+
   .md\:items-center {
     align-items: center;
   }
@@ -1074,5 +1089,21 @@ video {
   .md\:px-16 {
     padding-left: 4rem;
     padding-right: 4rem;
+  }
+}
+
+
+@media (min-width: 1024px) {
+
+  .lg\:w-3\/6 {
+    width: 50%;
+  }
+}
+
+
+@media (min-width: 1280px) {
+
+  .xl\:w-3\/6 {
+    width: 50%;
   }
 }
