Rating en publicacion

--- a/views/layout/header.pug
+++ b/views/layout/header.pug
@@ -1,5 +1,5 @@
-header(class="mx-3.5")
-    .flex.justify-between.items-center.my-5.w-full.pr-4.pl-2
+header(class="px-3.5 bg-white")
+    .flex.justify-between.items-center.py-5.w-full.pr-4.pl-2
         a(href="/") 
             img(src="/img/project/logo.svg", alt="Logo").w-32
 
