--- a/views/layout/index.pug
+++ b/views/layout/index.pug
@@ -9,10 +9,10 @@ html(lang="es")
     head
         meta(charset="UTF-8")
         meta(name="viewport", content="width=device-width, initial-scale=1.0")
-        title Fotaza | #{pagina}
+        title Fotaza
         block styles
         link(rel="stylesheet", href="/css/app.css")
-    body.min-h-screen
+    body.min-h-screen.bg-polished-white
         block contenido
 
         block scripts 
