--- a/views/publications/publication.pug
+++ b/views/publications/publication.pug
@@ -75,12 +75,10 @@ block contenido
                                 span#commentError(class="invisible text-red-600 ml-4 text-xs")
                                 button#btnComment(class="rounded-lg shadow-lg border border-principal-gray float-right p-[5px] px-4 m-2 mr-4 hover:bg-gray-input") Comentar
 
-                    #generalComments
-                        if comments.length == 0
-                            div#noComments
-                                p(class="text-2xl text-gray-500 text-center") Todavia no hay comentarios 
-                                img(src="/img/project/comments.svg", alt="No comments" class="m-auto my-5 w-40")
-                        
+                    #generalComments(class="h-96 overflow-auto pt-2 pr-4")
+                    div#seeMoreButton(class="w-fit m-auto text-center cursor-pointer rounded-3xl p-2 hover:bg-gray-200")
+                        p(class="mb-[-5px]") Ver más
+                        i(class="fa-solid fa-angles-down")
 
             #rightSectionBottom(class="w-3/5") 
                 #ratingSection 
@@ -98,26 +96,26 @@ block contenido
             a(href="/auth/login") 
                 button#btnGoLogin(class="mt-10 bg-principal-gray hover:bg-secondary-gray h-11 w-52 m-auto text-polished-white") Ir a iniciar sesión
 
+    if user
+        template#templateComment
+            div(class="comment mb-8")
+                div.flex                
+                    div(class="commentUserImage w-14 h-14 mr-2 bg-cover bg-center bg-no-repeat" style=`background-image: url(${user.image_url})`) 
+                    
+                    div(class="flex flex-col w-full")
+                        div(class="flex justify-between w-full mt-[-10px]")
+                            p.commentFullName.font-bold.text-principal-gray= `${user.name} ${user.lastname}`
+                            p.commentTimeThatPassed.text-gray-600.text-sm
 
-    template#templateComment
-        div(class="comment mb-8")
-            div.flex                
-                div(class="commentUserImage w-14 h-14 mr-2 bg-cover bg-center bg-no-repeat" style=`background-image: url(${user.image_url})`) 
-                
-                div(class="flex flex-col w-full")
-                    div(class="flex justify-between w-full mt-[-10px]")
-                        p.commentFullName.font-bold.text-principal-gray= `${user.name} ${user.lastname}`
-                        p.commentTimeThatPassed.text-gray-600.text-sm
+                        div(class="divCommentOptions bg-gray-200 rounded-[10px] rounded-tl-[0px] min-h-[50px] p-3 pl-5 relative") 
+                            button(class="btnCommentOptions absolute right-2 top-0")
+                                img(src="/img/project/options-horizontal.svg", alt="comment options" class="w-4 cursor-hover")
+                            div(class="hidden commentOptions absolute bg-gray-200 top-4 right-0 w-28 shadow-xl border border-gray-400 rounded") 
+                                div(class="btnCommentDelete flex justify-around items-center hover:bg-gray-300 p-3 cursor-pointer")
+                                    i(class="fa-solid fa-trash text-red-700 text-xs")
+                                    p.text-red-700.text-xs Eliminar 
 
-                    div(class="divCommentOptions bg-gray-200 rounded-[10px] rounded-tl-[0px] min-h-[50px] p-3 pl-5 relative") 
-                        button(class="btnCommentOptions absolute right-2 top-0")
-                            img(src="/img/project/options-horizontal.svg", alt="comment options" class="w-4 cursor-hover")
-                        div(class="hidden commentOptions absolute bg-gray-200 top-4 right-0 w-28 shadow-xl border border-gray-400 rounded") 
-                            div(class="btnCommentDelete flex justify-around items-center hover:bg-gray-300 p-3 cursor-pointer")
-                                i(class="fa-solid fa-trash text-red-700 text-xs")
-                                p.text-red-700.text-xs Eliminar 
-
-                        p.commentDescription
+                            p.commentDescription
 
     template#templateComment2
         div(class="comment mb-8")
@@ -139,10 +137,7 @@ block contenido
 
                         p.commentDescription
 
-    template#btnVerMas 
-        div(class="seeMore w-fit m-auto text-center cursor-pointer rounded-3xl p-2 hover:bg-gray-200")
-            p(class="mb-[-5px]") Ver más
-            i(class="fa-solid fa-angles-down")
+    
                         
 block scripts
     script(src="https://kit.fontawesome.com/e6a1497caa.js" crossorigin="anonymous")
