--- a/public/css/app.css
+++ b/public/css/app.css
@@ -597,6 +597,10 @@ video {
   margin-top: 1.25rem;
   margin-bottom: 1.25rem;
 }
+.my-14 {
+  margin-top: 3.5rem;
+  margin-bottom: 3.5rem;
+}
 .mb-1 {
   margin-bottom: 0.25rem;
 }
@@ -709,6 +713,18 @@ video {
   height: -moz-fit-content;
   height: fit-content;
 }
+.h-64 {
+  height: 16rem;
+}
+.h-56 {
+  height: 14rem;
+}
+.h-48 {
+  height: 12rem;
+}
+.max-h-96 {
+  max-height: 24rem;
+}
 .min-h-\[50px\] {
   min-height: 50px;
 }
@@ -790,6 +806,9 @@ video {
 }
 .w-full {
   width: 100%;
+}
+.w-auto {
+  width: auto;
 }
 .cursor-pointer {
   cursor: pointer;
@@ -928,6 +947,10 @@ video {
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
+.bg-gray-300 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(209 213 219 / var(--tw-bg-opacity));
+}
 .bg-opacity-40 {
   --tw-bg-opacity: 0.4;
 }
@@ -957,6 +980,9 @@ video {
 }
 .p-\[5px\] {
   padding: 5px;
+}
+.p-6 {
+  padding: 1.5rem;
 }
 .px-10 {
   padding-left: 2.5rem;
@@ -1242,6 +1268,41 @@ video {
 .hover\:bg-secondary-gray:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(146 154 171 / var(--tw-bg-opacity));
+}
+
+
+.hover\:text-opacity-5:hover {
+  --tw-text-opacity: 0.05;
+}
+
+
+.hover\:opacity-10:hover {
+  opacity: 0.1;
+}
+
+
+.hover\:opacity-5:hover {
+  opacity: 0.05;
+}
+
+
+.hover\:opacity-\[0\.02\]:hover {
+  opacity: 0.02;
+}
+
+
+.hover\:opacity-\[0\.80\]:hover {
+  opacity: 0.80;
+}
+
+
+.hover\:opacity-70:hover {
+  opacity: 0.7;
+}
+
+
+.hover\:opacity-60:hover {
+  opacity: 0.6;
 }
 
 
