--- a/public/css/app.css
+++ b/public/css/app.css
@@ -597,10 +597,6 @@ video {
   margin-top: 1.25rem;
   margin-bottom: 1.25rem;
 }
-.my-14 {
-  margin-top: 3.5rem;
-  margin-bottom: 3.5rem;
-}
 .mb-1 {
   margin-bottom: 0.25rem;
 }
@@ -667,6 +663,21 @@ video {
 .mt-\[-10px\] {
   margin-top: -10px;
 }
+.mb-\[-10px\] {
+  margin-bottom: -10px;
+}
+.ml-9 {
+  margin-left: 2.25rem;
+}
+.mt-16 {
+  margin-top: 4rem;
+}
+.ml-14 {
+  margin-left: 3.5rem;
+}
+.ml-24 {
+  margin-left: 6rem;
+}
 .block {
   display: block;
 }
@@ -694,6 +705,9 @@ video {
 .h-40 {
   height: 10rem;
 }
+.h-48 {
+  height: 12rem;
+}
 .h-52 {
   height: 13rem;
 }
@@ -703,24 +717,15 @@ video {
 .h-96 {
   height: 24rem;
 }
+.h-fit {
+  height: -moz-fit-content;
+  height: fit-content;
+}
 .h-full {
   height: 100%;
 }
 .h-screen {
   height: 100vh;
-}
-.h-fit {
-  height: -moz-fit-content;
-  height: fit-content;
-}
-.h-64 {
-  height: 16rem;
-}
-.h-56 {
-  height: 14rem;
-}
-.h-48 {
-  height: 12rem;
 }
 .max-h-96 {
   max-height: 24rem;
@@ -806,9 +811,6 @@ video {
 }
 .w-full {
   width: 100%;
-}
-.w-auto {
-  width: auto;
 }
 .cursor-pointer {
   cursor: pointer;
@@ -908,6 +910,10 @@ video {
   --tw-bg-opacity: 1;
   background-color: rgb(229 231 235 / var(--tw-bg-opacity));
 }
+.bg-gray-300 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(209 213 219 / var(--tw-bg-opacity));
+}
 .bg-green-500 {
   --tw-bg-opacity: 1;
   background-color: rgb(34 197 94 / var(--tw-bg-opacity));
@@ -947,10 +953,6 @@ video {
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
-.bg-gray-300 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(209 213 219 / var(--tw-bg-opacity));
-}
 .bg-opacity-40 {
   --tw-bg-opacity: 0.4;
 }
@@ -978,11 +980,11 @@ video {
 .p-4 {
   padding: 1rem;
 }
-.p-\[5px\] {
-  padding: 5px;
-}
 .p-6 {
   padding: 1.5rem;
+}
+.p-\[5px\] {
+  padding: 5px;
 }
 .px-10 {
   padding-left: 2.5rem;
@@ -1111,6 +1113,10 @@ video {
   font-size: 0.75rem;
   line-height: 1rem;
 }
+.text-6xl {
+  font-size: 3.75rem;
+  line-height: 1;
+}
 .font-bold {
   font-weight: 700;
 }
@@ -1177,6 +1183,14 @@ video {
 .text-white {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+.text-gray-200 {
+  --tw-text-opacity: 1;
+  color: rgb(229 231 235 / var(--tw-text-opacity));
+}
+.text-gray-300 {
+  --tw-text-opacity: 1;
+  color: rgb(209 213 219 / var(--tw-text-opacity));
 }
 .underline {
   text-decoration-line: underline;
@@ -1268,36 +1282,6 @@ video {
 .hover\:bg-secondary-gray:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(146 154 171 / var(--tw-bg-opacity));
-}
-
-
-.hover\:text-opacity-5:hover {
-  --tw-text-opacity: 0.05;
-}
-
-
-.hover\:opacity-10:hover {
-  opacity: 0.1;
-}
-
-
-.hover\:opacity-5:hover {
-  opacity: 0.05;
-}
-
-
-.hover\:opacity-\[0\.02\]:hover {
-  opacity: 0.02;
-}
-
-
-.hover\:opacity-\[0\.80\]:hover {
-  opacity: 0.80;
-}
-
-
-.hover\:opacity-70:hover {
-  opacity: 0.7;
 }
 
 
