--- a/public/css/app.css
+++ b/public/css/app.css
@@ -621,6 +621,9 @@ video {
 .ml-2 {
   margin-left: 0.5rem;
 }
+.ml-24 {
+  margin-left: 6rem;
+}
 .ml-3 {
   margin-left: 0.75rem;
 }
@@ -654,6 +657,9 @@ video {
 .mt-4 {
   margin-top: 1rem;
 }
+.mt-6 {
+  margin-top: 1.5rem;
+}
 .mt-7 {
   margin-top: 1.75rem;
 }
@@ -662,21 +668,6 @@ video {
 }
 .mt-\[-10px\] {
   margin-top: -10px;
-}
-.mb-\[-10px\] {
-  margin-bottom: -10px;
-}
-.ml-9 {
-  margin-left: 2.25rem;
-}
-.mt-16 {
-  margin-top: 4rem;
-}
-.ml-14 {
-  margin-left: 3.5rem;
-}
-.ml-24 {
-  margin-left: 6rem;
 }
 .block {
   display: block;
@@ -726,6 +717,9 @@ video {
 }
 .h-screen {
   height: 100vh;
+}
+.max-h-80 {
+  max-height: 20rem;
 }
 .max-h-96 {
   max-height: 24rem;
@@ -906,6 +900,10 @@ video {
   --tw-border-opacity: 1;
   border-color: rgb(146 154 171 / var(--tw-border-opacity));
 }
+.bg-gray-100 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(243 244 246 / var(--tw-bg-opacity));
+}
 .bg-gray-200 {
   --tw-bg-opacity: 1;
   background-color: rgb(229 231 235 / var(--tw-bg-opacity));
@@ -917,6 +915,10 @@ video {
 .bg-green-500 {
   --tw-bg-opacity: 1;
   background-color: rgb(34 197 94 / var(--tw-bg-opacity));
+}
+.bg-green-700 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(21 128 61 / var(--tw-bg-opacity));
 }
 .bg-neutral-800 {
   --tw-bg-opacity: 1;
@@ -1097,6 +1099,10 @@ video {
   font-size: 3rem;
   line-height: 1;
 }
+.text-6xl {
+  font-size: 3.75rem;
+  line-height: 1;
+}
 .text-base {
   font-size: 1rem;
   line-height: 1.5rem;
@@ -1113,10 +1119,6 @@ video {
   font-size: 0.75rem;
   line-height: 1rem;
 }
-.text-6xl {
-  font-size: 3.75rem;
-  line-height: 1;
-}
 .font-bold {
   font-weight: 700;
 }
@@ -1131,6 +1133,14 @@ video {
 }
 .uppercase {
   text-transform: uppercase;
+}
+.text-gray-300 {
+  --tw-text-opacity: 1;
+  color: rgb(209 213 219 / var(--tw-text-opacity));
+}
+.text-gray-400 {
+  --tw-text-opacity: 1;
+  color: rgb(156 163 175 / var(--tw-text-opacity));
 }
 .text-gray-500 {
   --tw-text-opacity: 1;
@@ -1183,14 +1193,6 @@ video {
 .text-white {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
-}
-.text-gray-200 {
-  --tw-text-opacity: 1;
-  color: rgb(229 231 235 / var(--tw-text-opacity));
-}
-.text-gray-300 {
-  --tw-text-opacity: 1;
-  color: rgb(209 213 219 / var(--tw-text-opacity));
 }
 .underline {
   text-decoration-line: underline;
