--- a/public/css/app.css
+++ b/public/css/app.css
@@ -597,6 +597,10 @@ video {
   margin-top: 1.25rem;
   margin-bottom: 1.25rem;
 }
+.my-8 {
+  margin-top: 2rem;
+  margin-bottom: 2rem;
+}
 .mb-1 {
   margin-bottom: 0.25rem;
 }
@@ -718,6 +722,18 @@ video {
 .h-screen {
   height: 100vh;
 }
+.h-5\/6 {
+  height: 83.333333%;
+}
+.h-80 {
+  height: 20rem;
+}
+.h-16 {
+  height: 4rem;
+}
+.h-72 {
+  height: 18rem;
+}
 .max-h-80 {
   max-height: 20rem;
 }
@@ -805,6 +821,18 @@ video {
 }
 .w-full {
   width: 100%;
+}
+.w-4\/6 {
+  width: 66.666667%;
+}
+.w-3\/6 {
+  width: 50%;
+}
+.w-5\/6 {
+  width: 83.333333%;
+}
+.w-44 {
+  width: 11rem;
 }
 .cursor-pointer {
   cursor: pointer;
@@ -1118,6 +1146,10 @@ video {
 .text-xs {
   font-size: 0.75rem;
   line-height: 1rem;
+}
+.text-lg {
+  font-size: 1.125rem;
+  line-height: 1.75rem;
 }
 .font-bold {
   font-weight: 700;
